--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ server.port=8080
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.chidituke=DEBUG
+
+# Security
+spring.security.user.name=user
+spring.security.user.password=password
