add postgreSQL database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=WorkoutTracker
 
 # Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/workout_tracker
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=workout_user
+spring.datasource.password=myPassword123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
