--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,15 +6,17 @@ spring.datasource.username=workout_user
 spring.datasource.password=myPassword123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Let Flyway handle schema, Hibernate just validates
-spring.jpa.hibernate.ddl-auto=validate
+# JPA Configuration - Let Flyway handle schema completely
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Enable Flyway migrations
+# Flyway Configuration - Proper migration management
 spring.flyway.enabled=true
-
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
+spring.flyway.locations=classpath:db/migration
 
 # Server configuration
 server.port=8080
